# kingdbengine

./: .gitignore  README.md  google_typechecker.cpp  meson.build  test_typechecker.cpp
.github/workflows/: clang-format-check.yml  clang-format-checker.yml  linting.yml
Modules/: meson.build
Modules/Audio/: audioexport.h  audiomanager.cpp  audiomanager.h  audioobject.cpp  audioobject.h  meson.build  testingcode.c
Modules/Audio/pipeline/: bgmpipeline.cpp  bgmpipeline.h  effectpipeline.cpp  effectpipeline.h  meson.build  pipeline.cpp  pipeline.h
Modules/Objects/: KDBLog.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h
gameobj/DataManager/: datamanager.h
gameobj/GameObject/: gameobj.cpp  gameobj.h
gameobj/GameWindow/: gamewindow.cpp  gamewindow.h
gameobj/TextManager/: textmanager.h
rawobject/GraphicObj/: graphicobj.h
rawobject/SoundObj/: meson.build  soundobj.cpp  soundobj.h
tests/: meson.build
tests/feature/: audio.feature  meson.build
tests/feature/fixtures/: gtest_fixture.cpp  gtest_fixture.h  gtest_main.cpp
tests/tmp/: audiotest.cpp  bgmtest.cpp  effecttest.cpp  meson.build
